started dpo cpo

--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -6,10 +6,9 @@
    "source": [
     "### Short list of objectives\n",
     "\n",
-    "* Import pdf of Proposed Rule XXXXXXX\n",
-    "* Query rule for baseline responses \n",
-    "* Fine-tune embedding model, recheck responses\n",
-    "* Summarize rule"
+    "- Instruction pretrain/fine-tuning LLM https://github.com/yizhongw/self-instruct/blob/main/data/seed_tasks.jsonl\n",
+    "    - Llama3 paper https://arxiv.org/pdf/2407.21783\n",
+    "- Use Ollama embeddings \n"
    ]
   },
   {
@@ -67,7 +66,7 @@
     "# from peft import PeftModel\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
-    "save_dir = \"/workspace/data/compliance/proposal_embedworking\"\n",
+    "save_dir = \"/workspace/data/compliance/proposal_embed\"\n",
     "\n",
     "# tokenizer_name = \"dunzhang/stella_en_1.5B_v5\"\n",
     "tokenizer_name = \"Qwen/Qwen2-1.5B\"\n",
@@ -100,6 +99,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -110,9 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded...\n",
+      "context_window=128000 num_output=256 is_chat_model=True is_function_calling_model=False model_name='llama3.1:8b-instruct-q8_0' system_role=<MessageRole.SYSTEM: 'system'>\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: notify if ollama server is running with model loaded\n",
     "import subprocess, os\n",
@@ -136,11 +151,15 @@
     "    print(f\"Using OpenAI {model_name}...\")\n",
     "    llm = LOpenAI(model=model_name, max_tokens=8000)\n",
     "else:\n",
-    "    try: \n",
-    "        print(\"Pulling Ollama model...\")\n",
-    "        sub_out = subprocess.run(['ollama', 'pull', model_name], capture_output=True, text=True)\n",
-    "    except Exception as e: \n",
-    "        print(f\"Error pulling model: Is the Ollama server running?\\n{e}\")\n",
+    "    subout = subprocess.run(['ollama', 'list'], capture_output=True, text=True)\n",
+    "    if model_name in subout.stdout:\n",
+    "        print('Model loaded...')\n",
+    "    else:\n",
+    "        try: \n",
+    "            print(\"Pulling Ollama model...\")\n",
+    "            sub_out = subprocess.run(['ollama', 'pull', model_name], capture_output=True, text=True)\n",
+    "        except Exception as e: \n",
+    "            print(f\"Error pulling model: Is the Ollama server running?\\n{e}\")\n",
     "    \n",
     "    addtion_kwargs = {\"max_new_tokens\": 8000}\n",
     "    # system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any sections, rules, acts or laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) from context that support the answer. Be detailed in your response.\"\n",
@@ -148,7 +167,22 @@
     "                 request_timeout=4000.0, **addtion_kwargs) #, system_prompt=system_prompt) additional_kwargs=addtion_kwargs,\n",
     "    print(llm.metadata)\n",
     "\n",
-    "Settings.llm = llm"
+    "# Settings.llm = llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
+    "\n",
+    "ollama_embedding = OllamaEmbedding(\n",
+    "    model_name=\"proposal_embed:latest\",\n",
+    "    base_url=\"http://localhost:11434\",\n",
+    "    ollama_additional_kwargs={\"mirostat\": 0},\n",
+    ")"
    ]
   },
   {
@@ -170,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,9 +241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proposal Information\n",
+      "I. Background A. Statutory Provisions\n",
+      "II. Section -by-Section Analysis\n",
+      "III. Request for Comments\n",
+      "IV. Analysis of the Costs and Benefits Associated with the Proposed Rule\n",
+      "V. Paperwork Reduction Act\n",
+      "VI. Regulatory Flexibility Act\n",
+      "VII. Considerations of th e Impact on the Economy\n",
+      "VIII.  FinCEN’s  Regulatory Impact Analysis\n",
+      "IX. FinCEN’s Unfunded Mandates Reform Act Determination\n"
+     ]
+    }
+   ],
    "source": [
     "import os, re\n",
     "from llama_index.readers.file import PDFReader\n",
@@ -229,187 +280,56 @@
     "doc_text = documents_proposal[0].text\n",
     "documents_proposal[0].text = fix_hyphenated_words(doc_text)\n",
     "\n",
-    "step=10000\n",
+    "# Remove the page numbers\n",
+    "step=8000\n",
     "start=0\n",
     "track=[]\n",
-    "for i in range(1, 18):  # Adjust the range as needed\n",
+    "for i in range(1, 95):  # Adjust the range as needed\n",
     "    # Regular expression pattern to match the specific number preceded by \\n \\n or \\n\\n and followed by a space\n",
     "    if i == 1:\n",
     "        pattern = rf'(\\n \\n|\\n\\n| \\n)({i})( )'\n",
     "    else:\n",
     "        pattern = rf'(\\n \\n|\\n\\n)({i})( )'\n",
-    "    text_slice = doc_text[start:start+step]\n",
     "    # Check if the pattern exists in the doc_text\n",
-    "    if re.search(pattern, text_slice):\n",
-    "        # Replace the matching patterns with an empty string\n",
-    "        matches = list(re.finditer(pattern, text_slice))\n",
-    "        # for mat in range(len(matches)):\n",
-    "        #     if start > matches[mat].span()[0]:\n",
-    "        #         continue\n",
-    "        #     else:\n",
-    "        #         break\n",
-    "        # if matches[mat].span()[0] < start:\n",
-    "        #     continue\n",
-    "        # else:\n",
-    "        print(f\"Found {i} {matches[0].span()}\")\n",
-    "        track.append(i)\n",
-    "        bingo=matches[0].span()\n",
-    "        text_slice = text_slice[:bingo[0]]+\"\\n\\n\"+text_slice[bingo[1]:]\n",
-    "        doc_text = doc_text[:start] + text_slice + doc_text[start+step:]\n",
-    "        start = bingo[1]\n",
-    "    else:\n",
-    "        start += step\n",
+    "    while start<len(doc_text):\n",
+    "        text_slice = doc_text[start:start+step]\n",
+    "        if re.search(pattern, text_slice):\n",
+    "            # Replace the matching patterns with an empty string\n",
+    "            matches = list(re.finditer(pattern, text_slice))\n",
+    "            # print(f\"Found {i} {matches[0].span()}\")\n",
+    "            track.append(i)\n",
+    "            bingo=matches[0].span()\n",
+    "            text_slice = text_slice[:bingo[0]]+\"\\n\\n\"+text_slice[bingo[1]:]\n",
+    "            doc_text = doc_text[:start] + text_slice + doc_text[start+step:]\n",
+    "            start = bingo[1]\n",
+    "            break\n",
+    "        else:\n",
+    "            start += step-100\n",
+    "            text_slice = doc_text[start:start+step]\n",
     "\n",
-    "# documents_proposal[0].text = doc_text\n",
-    "# pattern = r'(?<=\\n)([IVX]+\\..*?)(?=\\n[IVX]+\\.\\s|\\Z)'\n",
-    "# sections=[]\n",
-    "# sections.append(\"Proposal Information\"+documents_proposal[0].text.split(\"I. Background A. Sta\")[0])\n",
-    "# sections += re.findall(pattern, documents_proposal[0].text, re.DOTALL)\n",
-    "# section4_5split = sections[4].split(\"V. Paperwork Reduction Act\")\n",
-    "# sections[4]=section4_5split[0]\n",
-    "# sections = sections[:5]+[\"V. Paperwork Reduction Act\"+section4_5split[-1]]+sections[5:]\n",
-    "# for shead in [x.split('\\n')[0].strip() for x in sections]:\n",
-    "#     print(shead)\n",
+    "\n",
+    "documents_proposal[0].text = doc_text\n",
+    "pattern = r'(?<=\\n)([IVX]+\\..*?)(?=\\n[IVX]+\\.\\s|\\Z)'\n",
+    "sections=[]\n",
+    "sections.append(\"Proposal Information\"+documents_proposal[0].text.split(\"I. Background A. Sta\")[0])\n",
+    "sections += re.findall(pattern, documents_proposal[0].text, re.DOTALL)\n",
+    "section4_5split = sections[4].split(\"V. Paperwork Reduction Act\")\n",
+    "sections[4]=section4_5split[0]\n",
+    "sections = sections[:5]+[\"V. Paperwork Reduction Act\"+section4_5split[-1]]+sections[5:]\n",
+    "for shead in [x.split('\\n')[0].strip() for x in sections]:\n",
+    "    print(shead)\n",
     "\n",
     "# # pdf_urls = [\"/workspace/data/compliance/FSI_Factsheet.pdf\", \"/workspace/data/compliance/FSI_Press_Release.pdf\", \"/workspace/data/compliance/FSI_Rule_proposal.pdf\"]\n",
     "# # descriptions = [\"Factsheet about newly proposed SEC rule.\", \"Press release regarding newly proposed SEC rule.\", \"The full text of the newly proposed SEC rule.\"]\n",
     "# # documents_proposal = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
-    "# documents_proposal = [Document(text=t, \n",
-    "#                           text_template='{metadata_str}\\n\\n{content}') for t in sections]\n",
+    "documents_proposal = [Document(text=t, \n",
+    "                          text_template='{metadata_str}\\n\\n{content}') for t in sections]\n",
     "\n",
-    "# # add metadata to the documents_proposal\n",
-    "# for i in range(len(documents_proposal)):\n",
-    "#     documents_proposal[i].metadata[\"section\"] = documents_proposal[i].text.split(\"\\n\")[0].strip()\n",
+    "# add metadata to the documents_proposal\n",
+    "for i in range(len(documents_proposal)):\n",
+    "    documents_proposal[i].metadata[\"section\"] = documents_proposal[i].text.split(\"\\n\")[0].strip()\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(docs[0].text[19000:23000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser = PDFReader(return_full_document=True)\n",
-    "docs = parser.load_data(\"/workspace/data/compliance/FSI_Rule_proposal.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "test=\"\"\"Something here.\n",
-    "\n",
-    "5 ksjdkfjlksdjf\n",
-    "\n",
-    "4 financing of terrorism, and other illicit financ e activity, and to safeguard the national security of \n",
-    "the United States .1  The Secretary of the Treasury (“ the Secretary”) delegated the authority to \n",
-    "implement, administer, and enforce the BSA and its implementing regulations to the Director of \n",
-    "FinCEN .2 \n",
-    "person’s identity, including name, address, and other identifying information; and (C) consulting lists of known or suspected terrorists or terrorist organizations provided to the financial institution by any government agency to determine whether a person seeking to open an account appears on any such list.”\n",
-    "3 These programs are referred to as Customer Identification Program s \n",
-    " \n",
-    "1   See 31 U.S.C. 5311. Certain parts of the Currency and Foreign Transactions Reporting Act, as amended , \n",
-    "and other statutes relating to the subject matter of that Act, have come to be referred to as the BSA. The \n",
-    "BSA is codified at 12 U.S.C. 1829b, 12 U.S.C. 1951- 1960, and 31 U.S.C. 310, 5311- 5314, 5316- 5336, \n",
-    "including notes thereto, with implementing regulations at 31 CFR chapter X.  \n",
-    "2 See Treasury Order 180 –01, paragraph 3(a) (Jan. 14, 2020), available at https://home.treasury.gov/about/\n",
-    "general -information/orders -and-directives/treasury -order -180-01. \n",
-    "3 31 U.S.C. 5318(l)(2).  \n",
-    " \n",
-    "5 (“CIP s”) and are long-standing, foundational components of a financial institution’s  anti-money \n",
-    "laundering program.   \n",
-    "As enacted , section 326 applies to all “financial institutions .”  This term is  defined \n",
-    "broadly in the BSA to encompass a variety of entities, including commercial banks; agencies, \n",
-    "and branches of foreign banks in the United States ; thrift  institutions , credit unions, and private \n",
-    "banker s; trust companies; securities brokers and dealers registered with the Commission ; \n",
-    "investment companies; futures commission merchants ; insurance companies ; travel agencies ; \n",
-    "pawnbrokers; dealers in precious metals , stones, and jewels; check -cashers ; certain  casinos; and \n",
-    "telegraph companies, among others.4  The BSA also grants authority to the Secretary  to define, \n",
-    "by regulation, additional types of businesses as financial institutions where the Secretary  \n",
-    "determines that such businesses engage in any activity “similar to, related to, or a substitute for” those in which any of the businesses listed in the statutory definition are authorized to engage.\n",
-    "\n",
-    "As part of the implementation, administration , and enforcement of the BSA , this authority has \n",
-    "\"\"\"\n",
-    "test=docs[0].text\n",
-    "\n",
-    "\n",
-    "step=20000\n",
-    "start=0\n",
-    "for i in range(1, 7):  # Adjust the range as needed\n",
-    "    # Regular expression pattern to match the specific number preceded by \\n \\n or \\n\\n and followed by a space\n",
-    "    if i == 1:\n",
-    "        pattern = rf'(\\n \\n|\\n\\n| \\n)({i})( )'\n",
-    "    else:\n",
-    "        pattern = rf'(\\n \\n|\\n\\n)({i})( )'\n",
-    "    text_slice = test[start:start+step]\n",
-    "    # Check if the pattern exists in the test\n",
-    "    if re.search(pattern, text_slice):\n",
-    "        print(f\"Found {i}\")\n",
-    "        # Replace the matching patterns with an empty string\n",
-    "        matches = list(re.finditer(pattern, text_slice))\n",
-    "        # if len(matches) > 0:\n",
-    "        print(matches)\n",
-    "        bingo=matches[0].span()\n",
-    "        text_slice = text_slice[:bingo[0]]+\"\\n\\n\"+text_slice[bingo[1]:]\n",
-    "        test = test[:start] + text_slice + test[start+step:]\n",
-    "        start = bingo[1]\n",
-    "    else:\n",
-    "        start += step\n",
-    "\n",
-    "# print(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pattern = rf'(\\n \\n|\\n\\n)({1})( )'\n",
-    "matches = list(re.finditer(pattern, test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test[:3000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -587,6 +507,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
+    "\n",
+    "proposal_embed_model = OllamaEmbedding(\n",
+    "    model_name=\"proposal_embed:latest\",\n",
+    "    base_url=\"http://localhost:11434\",\n",
+    "    ollama_additional_kwargs={\"mirostat\": 0},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "import os\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
@@ -739,21 +674,6 @@
    "metadata": {},
    "source": [
     "## RAG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
-    "\n",
-    "ollama_embedding = OllamaEmbedding(\n",
-    "    model_name=\"llama2\",\n",
-    "    base_url=\"http://localhost:11434\",\n",
-    "    ollama_additional_kwargs={\"mirostat\": 0},\n",
-    ")"
    ]
   },
   {
@@ -1072,6 +992,17 @@
    "metadata": {},
    "source": [
     "## Agentic Version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Comment section (Ollama embeddings)\n",
+    "    - What are the main points?\n",
+    "    - What are the company opinions?\n",
+    "    - What are some of our opinions about main points? => RAG or GraphRAG\n",
+    "\n"
    ]
   },
   {
@@ -1789,7 +1720,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "from llama_index.core.response_synthesizers import TreeSummarize\n",
+    "file_path=\"/workspace/data/\"\n",
+    "transcript_files=[\"GMT20240920-170331_Recording.transcript.vtt\",\n",
+    " \"GMT20240924-170654_Recording.transcript.vtt\",\n",
+    " \"GMT20240927-170540_Recording.transcript.vtt\",\n",
+    " \"GMT20241001-170813_Recording.transcript.vtt\"\n",
+    "]\n",
+    "summarizer = TreeSummarize(llm=llm, verbose=True)\n",
+    "collection = []\n",
+    "for file in transcript_files:\n",
+    "    with open(os.path.join(file_path, file), \"r\") as f:\n",
+    "        transcript = f.read()\n",
+    "    clean_transcript = \"\\n\".join([x.split(\"\\n\")[-1] for x in transcript.split(\"\\n\\n\")][1:])\n",
+    "    prompt_summary = \"\"\"\n",
+    "    Summarize the content of the following meeting transcript.\n",
+    "    Be sure to include any action items or decisions made during the meeting.\n",
+    "    \"\"\"\n",
+    "    response = await summarizer.aget_response(prompt_summary, [clean_transcript])\n",
+    "    collection.append(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = [\"Sept 20\",\n",
+    "         \"Sept 24\",\n",
+    "         \"Sept 27\",\n",
+    "         \"Oct 1\"\n",
+    "         ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for date, summary in zip(dates, collection):\n",
+    "    print(date)\n",
+    "    print(summary)\n",
+    "    print()\n",
+    "    print(\"-\"*100)\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
