--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -116,18 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model loaded...\n",
-      "context_window=128000 num_output=256 is_chat_model=True is_function_calling_model=False model_name='llama3.1:8b-instruct-q8_0' system_role=<MessageRole.SYSTEM: 'system'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: notify if ollama server is running with model loaded\n",
     "import subprocess, os\n",
@@ -161,7 +152,7 @@
     "        except Exception as e: \n",
     "            print(f\"Error pulling model: Is the Ollama server running?\\n{e}\")\n",
     "    \n",
-    "    addtion_kwargs = {\"max_new_tokens\": 8000}\n",
+    "    addtion_kwargs = {\"max_new_tokens\": 8000, 'temperature': 0.9}\n",
     "    # system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any sections, rules, acts or laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) from context that support the answer. Be detailed in your response.\"\n",
     "    llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=False, \n",
     "                 request_timeout=4000.0, **addtion_kwargs) #, system_prompt=system_prompt) additional_kwargs=addtion_kwargs,\n",
@@ -171,10 +162,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "\n",
@@ -241,26 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Proposal Information\n",
-      "I. Background A. Statutory Provisions\n",
-      "II. Section -by-Section Analysis\n",
-      "III. Request for Comments\n",
-      "IV. Analysis of the Costs and Benefits Associated with the Proposed Rule\n",
-      "V. Paperwork Reduction Act\n",
-      "VI. Regulatory Flexibility Act\n",
-      "VII. Considerations of th e Impact on the Economy\n",
-      "VIII.  FinCEN’s  Regulatory Impact Analysis\n",
-      "IX. FinCEN’s Unfunded Mandates Reform Act Determination\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, re\n",
     "from llama_index.readers.file import PDFReader\n",
@@ -503,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +483,7 @@
     "\n",
     "proposal_embed_model = OllamaEmbedding(\n",
     "    model_name=\"proposal_embed:latest\",\n",
-    "    base_url=\"http://localhost:11434\",\n",
+    "    base_url=\"http://127.0.0.1:11434\",\n",
     "    ollama_additional_kwargs={\"mirostat\": 0},\n",
     ")"
    ]
@@ -531,7 +503,7 @@
     "finetuned_embed_model_name = \"/workspace/data/compliance/rule_proposal_embedding_model_gpt\"\n",
     "print(\"loading embed model...\")\n",
     "proposal_embed_model = HuggingFaceEmbedding(model_name=finetuned_embed_model_name)\n",
-    "rules_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "# rules_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
     "# Settings.embed_model = embed_model\n",
     "# Settings.chunk_size = 300\n",
@@ -686,10 +658,13 @@
     "from llama_index.core.postprocessor import LLMRerank\n",
     "from rag_utils import create_llama_vector_index_rag\n",
     "\n",
+    "Settings.llm = llm\n",
+    "Settings.embed_model = proposal_embed_model\n",
     "Settings.chunk_size = 300\n",
     "Settings.chunk_overlap = 20\n",
     "vector_index = create_llama_vector_index_rag(llm, proposal_embed_model, documents=documents_proposal, persist_dir=\"/workspace/data/compliance/vector_idx_proposed\")\n",
     "query_engine = vector_index.as_query_engine(\n",
+    "    llm=llm,\n",
     "    similarity_top_k=5,\n",
     "    # node_postprocessors=[\n",
     "    #     LLMRerank(\n",
@@ -701,20 +676,20 @@
     "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
     ")\n",
     "\n",
-    "Settings.chunk_size = 500\n",
-    "Settings.chunk_overlap = 20\n",
-    "rules_vector_index = create_llama_vector_index_rag(llm, rules_embed_model, documents=documents, persist_dir=\"/workspace/data/compliance/vector_idx_sec\")\n",
-    "graph_index = rules_vector_index.as_query_engine(\n",
-    "    similarity_top_k=5,\n",
-    "    # node_postprocessors=[\n",
-    "    #     LLMRerank(\n",
-    "    #         choice_batch_size=5,\n",
-    "    #         top_n=2,\n",
-    "    #     )\n",
-    "    # ],\n",
-    "    # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
-    "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
-    ")"
+    "# Settings.chunk_size = 500\n",
+    "# Settings.chunk_overlap = 20\n",
+    "# rules_vector_index = create_llama_vector_index_rag(llm, rules_embed_model, documents=documents, persist_dir=\"/workspace/data/compliance/vector_idx_sec\")\n",
+    "# graph_index = rules_vector_index.as_query_engine(\n",
+    "#     similarity_top_k=5,\n",
+    "#     # node_postprocessors=[\n",
+    "#     #     LLMRerank(\n",
+    "#     #         choice_batch_size=5,\n",
+    "#     #         top_n=2,\n",
+    "#     #     )\n",
+    "#     # ],\n",
+    "#     # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
+    "#     response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
+    "# )"
    ]
   },
   {
@@ -726,6 +701,38 @@
     "response = query_engine.query(\"Summarize section IX.\")\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(query_engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
