--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# Set up ollama\n",
     "!apt-get update && apt-get install tmux vim -y\n",
-    "!pip3 install llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-utils-workflow llama-index-readers-file llama-index-llms-llama-cpp\n",
+    "!pip3 install --ignore-installed llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-utils-workflow llama-index-readers-file llama-index-llms-llama-cpp llama-index-retrievers-you\n",
     "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv graspologic fpdf2\n",
     "!pip3 install flash-attn --no-build-isolation\n",
     "!curl -fsSL https://ollama.com/install.sh | sh\n"
